# agente-obrabot

./: .cursorignore  .env.example  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  railway.api.json  railway.worker.json
alembic/: env.py
docs/: README.md  api-reference.md  architecture.md  guia-engenheiro.md  operations.md  plano-de-acao-2026-07-01.md  project-audit-2026-06-29.md  railway-deploy-plan.md  storage-taxonomy.md
scripts/: audit_dependencies.py  cleanup_obra_teste.py  seed_obras.py  smoke_api.py  smoke_foto.py  smoke_openclaw.py  smoke_orcamento.py  smoke_prod.py  smoke_rdo.py  smoke_s3.py
src/: __init__.py
tests/: test_admin_auth.py  test_admin_obras.py  test_admin_routes.py  test_admin_service.py  test_api_auth.py  test_approval_gate.py  test_body_limit.py  test_bucket_service.py  test_ceo_pipeline_storage_order.py  test_client_ip.py  test_cors_security.py  test_domain_routes_http.py  test_entrada_media.py  test_entrada_pipeline_idempotency.py  test_entrada_service.py  test_foto_service.py  test_health.py  test_ingestao_service.py  test_logging.py  test_media_service.py  test_media_size_limits.py  test_medicao_service.py  test_mvp1.py  test_obras.py  test_openai_service.py  test_openclaw_config.py  test_openclaw_idempotency.py  test_orcamento_service.py  test_pdf_service.py  test_production_secrets.py  test_protected_rate_limit.py  test_rdo_aggregator_service.py  test_security_headers.py  test_security_hmac.py  test_security_openclaw.py  test_server_exceptions.py  (+5 more)
(+117 files in other folders)
