[project]
name = "obrabot"
version = "0.1.0"
description = "Construtora AgentOS — agente de gestão documental de obras"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "rq>=2.0.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.17",
    "openai>=1.58.0",
    "jinja2>=3.1.4",
    "openpyxl>=3.1.5",
    "python-slugify>=8.0.4",
    "tenacity>=9.0.0",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
